# drama

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose-kafka.yml  docker-compose.yml  example.py  mypy.ini  pyproject.toml
drama/: __init__.py  __main__.py  config.py  database.py  datatype.py  logger.py  manager.py  process.py  servo.py
drama/api/: app.py  security.py
drama/api/routes/: workflow.py
drama/core/: annotation.py  model.py
drama/core/catalog/load/: ImportFile.py  ImportTSV.py
drama/core/catalog/read/: ReadTSV.py
drama/core/catalog/tests/: __init__.py  test_ImportFile.py  test_ImportTSV.py  test_ReadTSV.py
drama/core/catalog/tests/resources/: param.tsv
drama/core/utils/: DynamicParameter.py  RevokeExecution.py
drama/models/: messages.py  task.py  workflow.py
drama/storage/: __init__.py  base.py  helpers.py
drama/storage/backend/: hdfs.py  local.py  minio.py
drama/tests/: test_datatype.py  test_manager.py  test_models.py  test_process.py  test_scheduler.py  test_servo.py  test_storage.py
drama/worker/: __init__.py  actor.py  executor.py  helpers.py  scheduler.py  worker.py
examples/: README.md  run.py  run_and_revoke.py
examples/dynamic_parameter/: README.md  run.py
examples/generate_points/: PointPublisher.py  PointReader.py  README.md  StreamingPointReader.py  run.py  run_and_revoke.py
examples/generate_points/catalog/: PointPublisher.py  PointReader.py  StreamingPointReader.py
examples/read_file/: README.md  run.py
examples/secrets/: README.md  run.py
examples/secrets/catalog/: LeakSecrets.py
scripts/: purge_remote_minio.py  put_get_minio.py
