[tool.poetry]
name = "drama"
version = "0.5.5"
readme = "README.md"
description = "Workflow orchestration engine"
homepage = "https://github.com/KhaosResearch/drama/"
repository = "https://github.com/KhaosResearch/drama/"
authors = ["Khaos Research Group"]
classifiers=[
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
uvicorn = "^0.13.4"
requests = "^2.23.0"
fastavro = "^1.3.5"
kafka-python = "^2.0.2"
dramatiq = {extras = ["rabbitmq", "watch"], version = "^1.9.0"}
pymongo = "^3.10.1"
minio = "^7.0.3"
hdfs = "^2.6.0"
filelock = "^3.0.12"

[tool.poetry.dev-dependencies]
black = "^20.8.b1"
mypy = "^0.812"
isort = "^5.5.2"
pytest = "^6.1.0"

[tool.poetry.scripts]
drama = "drama.__main__:cli"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
