[tool.poetry]
name = "drama"
version = "0.7.2"
readme = "README.md"
description = "Workflow orchestration engine"
homepage = "https://github.com/benhid/drama/"
repository = "https://github.com/benhid/drama/"
authors = ["Antonio Benítez Hidalgo <antoniobenitezhid@gmail.com>"]
classifiers=[
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.66.0"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
uvicorn = "^0.14.0"
requests = "^2.23.0"
fastavro = "^1.4.1"
kafka-python = "^2.0.2"
dramatiq = {extras = ["rabbitmq", "watch"], version = "^1.9.0"}
pymongo = "^3.10.1"
minio = "^7.0.3"
hdfs = "^2.6.0"
filelock = "^3.0.12"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.910"
isort = "^5.5.2"
pytest = "^6.2.4"

[tool.poetry.scripts]
drama = "drama.__main__:cli"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
